syntax = "proto3";
option go_package = "/pb";
package cherry.proto.pb;

// 注册开发帐号
message DevRegister {
  string accountName = 1; // 帐号名
  string password = 2;    // 密码
  string ip = 3;          // ip地址
}

// 用户信息
message User {
  int32  sdkId = 1;    // sdk id
  int32  pid = 2;      // 包id
  string openId = 3;   // sdk的openid
  int32  serverId = 4; // 所在游戏服id
  int64  uid = 5;      // 用户id
  string ip = 6;       // 请求ip
}

// 节点状态
enum NodeState {
  Open = 0;     // 开放状态,所有角色可以进入
  Maintain = 1; // 维护状态,白名单角色可以进入
  Closed = 2;   // 关闭状态,所有角色不可进入(同时踢除所有角色)
}